# ClaimVoice

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAIMVOICE_COMMIT_PLAN.xlsx  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  Makefile  README.md  WS1_DELIVERABLES.md  WS1_FILE_INDEX.md  WS1_FINAL_REPORT.md  WS1_QUICK_START.md  WS1_SESSION_1_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  dvc.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  sbc_rag_index.dump  turbo.json
Plan/: HANDOFF.md  (+5 more)
services/document-ai/: CLAUDE.md  Dockerfile  README.md  RESEARCH.md  SPEC.md  pyproject.toml
services/document-ai/artifacts/: .gitignore  README.md
services/document-ai/ml/: README.md  mlflow.db
services/document-ai/ml/configs/: train_card_ocr.yaml  train_payor_classifier.yaml  train_sbc.yaml
services/document-ai/ml/models/card_ocr_layoutlm/: MODEL_CARD.md  dataset.py  evaluate.py  model.py  predict.py  train.py
services/document-ai/ml/models/payor_classifier_resnet/: MODEL_CARD.md  dataset.py  evaluate.py  model.py  predict.py  train.py
services/document-ai/ml/models/sbc_parser_layoutlm/: MODEL_CARD.md  dataset.py  evaluate.py  model.py  predict.py  train.py
services/document-ai/ml/scripts/: evaluate_all.sh  train_card_ocr.sh  train_payor_classifier.sh  train_sbc_parser.sh
services/document-ai/src/document_ai/: main.py
services/document-ai/src/document_ai/core/: config.py
services/document-ai/src/document_ai/inference/: card_ocr_runner.py  payor_classifier_runner.py  sbc_parser_runner.py
services/document-ai/src/document_ai/lib/: logger.py  metrics.py  tracing.py
services/document-ai/tests/unit/: test_api_v1.py  test_payor_classifier_runner.py  test_sbc_parser_runner.py
services/eligibility/: Dockerfile  Dockerfile.train  README.md  alembic.ini  pyproject.toml
services/eligibility/alembic/: env.py
services/eligibility/alembic/versions/: 001_init_schema.py  002_sbc_chunks.py
services/eligibility/src/eligibility/: main.py
services/eligibility/src/eligibility/core/: config.py
services/eligibility/src/eligibility/lib/: db.py  embeddings.py  money.py
services/eligibility/src/eligibility/repositories/: member_repo.py  sbc_rag_repo.py
services/eligibility/src/eligibility/schemas/: benefit.py  cost.py  coverage.py  fact_check.py  formulary.py  member.py  sbc_rag.py
services/eligibility/src/eligibility/services/: cost_estimator.py  coverage.py  fact_check.py  formulary.py  plan_graph.py  sbc_rag.py  x12_stub.py
services/eligibility/tests/: conftest.py
services/eligibility/tests/integration/: test_cost_endpoint.py  test_coverage_endpoint.py  test_fact_check_endpoint.py  test_formulary_lookup_endpoint.py  test_member_journey.py  test_sbc_embed_ingest.py
services/eligibility/tests/unit/: test_c71_rag_readiness.py  test_cost.py  test_coverage.py  test_fact_check.py  test_formulary_lookup.py  test_member_schemas.py  test_sbc_embed_ingest.py
services/providers/: Dockerfile  README.md  pyproject.toml
services/providers/alembic/: env.py
services/providers/src/providers/: main.py
services/providers/src/providers/core/: config.py
services/providers/src/providers/lib/: db.py  logger.py
services/providers/src/providers/repositories/: provider_repo.py
services/providers/src/providers/schemas/: provider.py
services/providers/src/providers/services/: care_compare.py  geo_search.py  in_network.py  npi_loader.py  quality_enrichment.py
services/providers/tests/: conftest.py
services/providers/tests/integration/: test_providers_bulk.py  test_providers_near.py
services/providers/tests/unit/: test_geo_search.py  test_provider_schemas.py
services/voice-agent/: Dockerfile  README.md  pyproject.toml
services/voice-agent/evals/: run_eval.py
services/voice-agent/src/voice_agent/: main.py
services/voice-agent/tests/unit/: conftest.py  test_agent_graph.py  test_agent_respond.py  test_answer_composer.py  test_answer_orchestrator.py  test_c64_cartesia_stabilization.py  test_c65_eval_gate.py  test_c66_phone_demo_parity.py  test_c67_production_hardening.py  test_c68_sbc_rag_fallback.py  test_c69_rag_facts_claude_guard.py  test_cartesia_tts.py  test_component_37.py  test_gemini_live_bridge.py  test_gemini_live_speak.py  test_gemini_runtime_fallbacks.py  test_hallucination_guard.py  test_langgraph_runtime.py  test_memory.py  test_pipeline_contract.py  test_prepare_response.py  test_runtime_status.py  test_stt_adapter.py  test_telephony_ws.py  test_tool_clients.py  test_tool_mode_hardening.py  test_tts_adapter.py  test_tts_synthesize.py  test_voice_factory.py
(+603 files in other folders)
