[project]
name = "claimvoice"
version = "0.1.0"
description = "Multi-modal AI agent for US health insurance members"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "services/document-ai",
    "services/eligibility",
    "services/providers",
    "services/voice-agent",
    "eval",
    "packages/shared-logging/python",
    "packages/shared-observability/python",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pyyaml>=6.0",
]
