[project]
name = "claimvoice"
version = "0.1.0"
description = "Multi-modal AI agent for US health insurance members"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "services/document-ai",
    "services/eligibility",
    "services/providers",
    "services/voice-agent",
    "eval",
    "packages/shared-logging/python",
    "packages/shared-observability/python",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "mlflow>=2.18",
    "anthropic>=0.40",
    # Data-ingestion (WS-1) runtime deps — used by data/ingest/*.py
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "faker>=30.0",
    "pillow>=11.0",
    "ijson>=3.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "notebooks",
    "data/raw",
    "data/processed",
    "artifacts",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
