[project]
name = "providers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
  "redis>=5.2",
  "httpx>=0.28",
  "loguru>=0.7",
  "opentelemetry-sdk>=1.29",
  "prometheus-client>=0.21",
]
